# zwfw-load

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  proxyServer.js
.github/workflows/: release.yml
public/js/: index.js
scripts/: collect-release-artifacts.mjs
src/: scheduler.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: commands.rs  database.rs  main.rs  proxy.rs  proxy_tester.rs  state.rs
src/proxy/: CircuitBreaker.js  ConnectionPool.js  ProxyLoadBalancer.js  algorithms.js  dns.js  health.js  index.js  protocols.js  utils.js
web/: index.html  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  types.ts
web/src/components/common/: empty-state.tsx  status-badge.tsx
web/src/components/dialogs/: about-dialog.tsx  advanced-dialog.tsx  dns-dialog.tsx  group-dialog.tsx  proxy-dialog.tsx
web/src/components/layout/: app-header.tsx  app-sidebar.tsx  metric-bar.tsx
web/src/components/sections/: dns-section.tsx  groups-section.tsx  load-settings-section.tsx  proxies-section.tsx  status-section.tsx  transfer-section.tsx
web/src/components/ui/: card.tsx  input.tsx  select.tsx  sonner.tsx
web/src/lib/: api.ts  constants.ts  format.ts
